--- a/lab4/src/app/product-list.component.html
+++ b/lab4/src/app/product-list.component.html
@@ -2,13 +2,13 @@
 
 <div *ngFor="let product of products">
   <h3>
-    <a [title]="product.name + ' details'">
+    <a href = "{{product.url }}" [title]="product.name + ' details'">
       {{ product.name }}
     </a>
     <p *ngIf="product.description">
       Description: {{ product.description }}
     </p>
-    <p><img src="products.image" width ='250' height = '150' ></p>
+    <p><img src="{{product.image}}" width ='250' height = '150' ></p>
     <button type="button" (click)="share()">
       Share
     </button>
@@ -22,9 +22,3 @@
   
 </h3>
 </div>
-
-<!-- 
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at https://angular.io/license
--->
